@@ -60,6 +60,8 @@ A suitable implementation is to get the id of the `self` object using `IObjectSe
 - https://github.com/eclipse-sirius/sirius-web/issues/2245[#2245] [sirius-web] Fix an issue when triggering expandAll on models with multiple root objects.
 - https://github.com/eclipse-sirius/sirius-web/issues/2333[#2333] [diagram] Fix a warning console when opening a palette on a diagram.
 - https://github.com/eclipse-sirius/sirius-web/issues/2345[#2345] [diagram] Fix a issue on React Flow diagram when opening a palette with toolSection without nodeTool.
+- https://github.com/eclipse-sirius/sirius-web/issues/2192[#2192] [view] Fix an issue where the _Shape_ property of an ImageNodeStyle was not mandatory.
+An error message is now displayed if the _Shape_ is not set. 
 
 === New Features
 
